Fix resume image resize animation when sliding back to website from pdf page on mobile

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ ul.main-menu li a.active {
 .resume-preview > a > img {
   height: 250px;
   border: 2px solid rgba(0,0,0,0);
-  transition: all 0.5s;
+  transition: border 0.5s;
 }
 @media only screen and (max-width: 1024px) {
   .resume-preview > a > img {
